# kubex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  LICENSE  README.md  kubex.code-workspace  lychee.toml  mise.toml  mkdocs.yml  pyproject.toml  versions.json
.github/: FUNDING.yml
.github/workflows/: docs.yaml  lint.yaml  publish-test.yaml  publish.yaml  test.yaml
.ralphex/plans/: 2026-04-30-library-documentation-mkdocs-material.md  2026-05-03-extract-client-options.md
0.1.0-beta.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0-beta.1/advanced/: index.html
0.1.0-beta.1/concepts/: index.html
0.1.0-beta.1/contributing/: index.html
0.1.0-beta.1/operations/: index.html
0.1.0-beta.1/reference/: index.html
0.1.0-beta.1/search/: search_index.json
0.1.0-beta.1/subresources/: index.html
0.1.0-beta.2/: 404.html  CNAME  index.html  sitemap.xml
0.1.0-beta.2/advanced/: index.html
0.1.0-beta.2/concepts/: index.html
0.1.0-beta.2/contributing/: index.html
0.1.0-beta.2/operations/: index.html
0.1.0-beta.2/reference/: index.html
0.1.0-beta.2/stylesheets/: extra.css
0.1.0-beta.2/subresources/: index.html
benchmarks/: .gitignore  README.md  _cluster.py  conftest.py  run.py  test_bench.py
benchmarks/adapters/: __init__.py  _kubex_base.py  k8s_asyncio.py  kubex_aiohttp.py  kubex_httpx.py  kubex_metadata.py  protocol.py
benchmarks/runner/: driver.py  harness.py  metrics.py  report.py
benchmarks/scenarios/: __init__.py  list_ops.py  logs_ops.py  single_ops.py  watch_ops.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/advanced/: index.html
dev/concepts/: index.html
dev/contributing/: index.html
dev/operations/: index.html
dev/reference/: index.html
dev/search/: search_index.json
dev/subresources/: index.html
docs/: contributing.md  index.md
docs/advanced/: authentication.md  benchmarks.md  clients-runtimes.md  custom-resources.md  index.md  multi-version-k8s.md
docs/concepts/: api.md  clients.md  configuration.md  exceptions.md  index.md  subresources.md
docs/getting-started/: installation.md  quickstart.md
docs/operations/: crud.md  index.md  patch.md  timeouts.md  watch.md
docs/plans/: 2026-04-24-mise-regenerate-models.md
docs/reference/: api.md  client.md  configuration.md  core.md  index.md  kubex-core.md
docs/subresources/: attach.md  ephemeral-containers.md  eviction.md  exec.md  index.md  logs.md  metadata.md  portforward.md  resize.md  scale.md  status.md
examples/: aiohttp_client.py  attach_pod.py  client_options.py  custom_resource.py  delete_collection.py  error_handling.py  exec_pod.py  get_pod.py  get_pod_logs.py  list_namesapces.py  list_namespaces.py  patch_deployment.py  portforward_pod.py  replace_pod.py  scale_deployment.py  status_operations.py  watch_pods.py
kubex/: __init__.py  __version__.py  json.py
kubex/api/: __init__.py  _attach.py  _ephemeral_containers.py  _eviction.py  _exec.py  _exec_session.py  _logs.py  _metadata.py  _portforward.py  _portforward_session.py  _protocol.py  _resize.py  _scale.py  _status.py  _stream_session.py  _subressource.py  api.py  params.py  patch.py  request.py  tmp_client.py
kubex/client/: __init__.py  aiohttp.py  client.py  configuration.py  httpx.py  options.py  websocket.py
kubex/configuration/: __init__.py  configuration.py  file_config.py
kubex/core/: exceptions.py  exec_channels.py  json_patch.py  json_pointer.py  params.py  patch.py  request.py  response.py  subresource.py
kubex/models/: base.py  namespace.py  pod.py  scale.py  status.py  watch_event.py
scripts/codegen/: __init__.py  __main__.py  enum_emitter.py  fetch_specs.py  imports.py  ir.py  model_emitter.py  naming.py  package_builder.py  ref_resolver.py  resource_detector.py  spec_loader.py  type_mapper.py
scripts/codegen/tests/golden/kubex-k8s-1-30/: README.md  pyproject.toml
scripts/codegen/tests/golden/kubex-k8s-1-30/kubex/k8s/v1_30/: __init__.py  apps_v1.py  core_v1.py
scripts/codegen/tests/golden/kubex-k8s-1-30/kubex/k8s/v1_30/apps/v1/: deployment.py  deployment_condition.py  deployment_list.py  deployment_spec.py  deployment_status.py
scripts/codegen/tests/golden/kubex-k8s-1-30/kubex/k8s/v1_30/core/v1/: node.py  node_address.py  node_list.py  node_status.py
src/examples/: get_pod.py
src/kubex/: __init__.py
test/: stub_client.py  test_api.py  test_error_handling.py  test_metadata_accessor.py
test/e2e/: _helpers.py  conftest.py  test_attach.py  test_bearer_token_auth.py  test_core_api_namespaces.py  test_core_api_pod.py  test_exec.py  test_portforward.py  test_replace_and_delete_collection.py  test_scale_subresource.py  test_subresource_apis.py
test/test_attach/: test_accessor.py  test_options.py
test/test_client/: test_aiohttp_options.py  test_aiohttp_websocket.py  test_base_client.py  test_base_client_aiohttp.py  test_create_client.py  test_httpx_options.py  test_httpx_websocket.py  test_options.py  test_trust_env.py  test_websocket_protocol.py
test/test_configuration/: test_client_configuration.py  test_file_config.py  test_incluster_config.py
test/test_exec/: test_accessor.py  test_channels.py  test_options.py  test_session.py
test/test_models/: test_eviction.py
test/test_patch/: test_json_patch.py  test_json_pointer.py
test/test_portforward/: test_accessor.py  test_channels.py  test_listener.py  test_options.py  test_session.py  test_stream.py
test/test_request_builder/: conftest.py  test_attach.py  test_builder.py  test_create_subresource.py  test_exec.py  test_logs.py  test_metadata.py  test_portforward.py  test_subresource.py
test/test_stream/: test_base_session.py  test_session.py
test/test_subresource_descriptors/: conftest.py  test_accessor_caching.py  test_descriptor_typing.py  test_descriptors.py  test_ephemeral_containers_accessor.py  test_ephemeral_containers_descriptor.py  test_eviction_accessor.py  test_eviction_descriptor.py  test_exec_descriptor.py  test_get_replace_patch_accessors.py  test_logs_descriptor.py  test_namespace_resolution.py  test_resize_accessor.py  (+5 more)
(+143 files in other folders)
