[project]
name = "kubex"
dynamic = ["version"]
description = "Asynchronous Kubernetes client inspired by kube.rs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Codemageddon", email = "dev@codemageddon.me"},
]
maintainers = [
    {name = "Codemageddon", email = "dev@codemageddon.me"},
]
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0.2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/codemageddon/kubex"
Repository = "https://github.com/codemageddon/kubex.git"
Issues = "https://github.com/codemageddon/kubex/issues"
Changelog = "https://github.com/codemageddon/kubex/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "types-pyyaml>=6.0.12.20240917",
    "types-ujson>=5.10.0.20240515",
]

[tool.hatch.version]
path = "src/kubex/__version__.py"
