[project]
name = "kubex"
dynamic = ["version"]
description = "Asynchronous Kubernetes client inspired by kube.rs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Codemageddon", email = "dev@codemageddon.me"},
]
maintainers = [
    {name = "Codemageddon", email = "dev@codemageddon.me"},
]
dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0.2",
    "kubex-core",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/codemageddon/kubex"
Repository = "https://github.com/codemageddon/kubex.git"
Issues = "https://github.com/codemageddon/kubex/issues"
Changelog = "https://github.com/codemageddon/kubex/blob/main/CHANGELOG.md"

[project.optional-dependencies]
aiohttp = [
    "aiohttp>=3.11.2",
]
httpx = [
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy"
]
# Golden snapshot tree isn't installed; its intra-package imports (e.g.
# `kubex.k8s.v1_30._common`) can't resolve under the repo-wide mypy pass.
# The snapshot test and the generator's own `verify` command cover it.
exclude = [
    "scripts/codegen/tests/golden/",
]

[dependency-groups]
dev = [
    "anyio>=4.6.0",
    "mypy==1.11.2",
    "pre-commit>=4.0.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "testcontainers>=4.8.1",
    "trio>=0.26.2",
    "types-pyyaml>=6.0.12.20240917",
    "types-ujson>=5.10.0.20240515",
    "jinja2>=3.1",
    "httpx>=0.27.2",
    "typer>=0.24.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
kubex-core = { workspace = true }

[tool.hatch.version]
path = "kubex/__version__.py"

[tool.hatch.build.targets.sdist]
only-include = ["kubex"]

[tool.hatch.build.targets.wheel]
packages = ["kubex"]
