[project]
name = "kubex"
dynamic = ["version"]
description = "Asynchronous Kubernetes client inspired by kube.rs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Codemageddon", email = "dev@codemageddon.me"},
]
maintainers = [
    {name = "Codemageddon", email = "dev@codemageddon.me"},
]
dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0.2",
    "kubex-core",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/codemageddon/kubex"
Repository = "https://github.com/codemageddon/kubex.git"
Issues = "https://github.com/codemageddon/kubex/issues"
Changelog = "https://github.com/codemageddon/kubex/blob/main/CHANGELOG.md"

[project.optional-dependencies]
aiohttp = [
    "aiohttp>=3.11.2",
]
httpx = [
    "httpx>=0.27.2",
]
"k8s-1.32" = [
    "kubex-k8s-1-32",
]
"k8s-1.33" = [
    "kubex-k8s-1-33",
]
"k8s-1.34" = [
    "kubex-k8s-1-34",
]
"k8s-1.35" = [
    "kubex-k8s-1-35",
]
"k8s-1.36" = [
    "kubex-k8s-1-36",
]
"k8s-1.37" = [
    "kubex-k8s-1-37",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
namespace_packages = true
explicit_package_bases = true
plugins = [
    "pydantic.mypy"
]
exclude = [
    "scripts/codegen/tests/golden/",
    "packages/",
]

[dependency-groups]
dev = [
    "kubex-k8s-1-35",
    "anyio>=4.6.0",
    "mypy==1.11.2",
    "pre-commit>=4.0.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "testcontainers>=4.8.1",
    "trio>=0.26.2",
    "types-pyyaml>=6.0.12.20240917",
    "types-ujson>=5.10.0.20240515",
    "jinja2>=3.1",
    "httpx>=0.27.2",
    "typer>=0.24.1",
]
benchmark = [
    "kubex-k8s-1-35",
    "kubernetes-asyncio>=35.0.1,<36",
    "memray>=1.14",
    "pytest-memray>=1.7",
    "pytest-benchmark>=4.0",
    "pyinstrument>=5.0",
    "httpx>=0.27.2",
    "aiohttp>=3.11.2",
    "trio>=0.26.2",
    "anyio>=4.6.0",
    "testcontainers>=4.8.1",
    "pyyaml>=6.0.2",
    "pytest>=8.3.3",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
kubex-core = { workspace = true }
kubex-k8s-1-32 = { workspace = true }
kubex-k8s-1-33 = { workspace = true }
kubex-k8s-1-34 = { workspace = true }
kubex-k8s-1-35 = { workspace = true }
kubex-k8s-1-36 = { workspace = true }
kubex-k8s-1-37 = { workspace = true }

[tool.ruff.lint.isort]
known-first-party = [
	"kubex.k8s.v1_32",
	"kubex.k8s.v1_33",
	"kubex.k8s.v1_34",
	"kubex.k8s.v1_35",
	"kubex.k8s.v1_36",
	"kubex.k8s.v1_37",
	"kubex_core",
	"kubex",
]

[tool.hatch.version]
path = "kubex/__version__.py"

[tool.hatch.build.targets.sdist]
only-include = ["kubex"]

[tool.hatch.build.targets.wheel]
packages = ["kubex"]

[tool.pytest.ini_options]
addopts = "--ignore=benchmarks"
