[project]
name = "kubex-k8s-1-30"
version = "0.0.0.dev0"
description = "Pydantic v2 Kubernetes 1.30 resource models for Kubex"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Codemageddon", email = "dev@codemageddon.me"},
]
dependencies = [
    "pydantic>=2.0,<3",
    "kubex-core",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["kubex"]

[tool.hatch.build.targets.wheel]
packages = ["kubex"]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
